@@ -23,6 +23,9 @@ Breaking Changes
   compatible with each other, resulting in quirks and making certain optimizations more
   difficult than they should be.
 
+- The ``BifEnum`` namespace was moved to be part of the ``zeek`` namespace for consistency
+  with the other namespaces generated by bifcl (``BifType``, ``BifConst``, etc).
+
 New Functionality
 -----------------
 
